--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Montserrat:wght@400;600;700;800;900&family=PT+Sans+Narrow&family=Poiret+One&family=Rambla&family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Montserrat:wght@400;600;700;800;900&family=PT+Sans+Narrow&family=Poiret+One&family=Rambla&family=Roboto:wght@300;400;500;700;900&family=Yellowtail&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
